amelioration of code